--- a/JavaScript/遍历.md
+++ b/JavaScript/遍历.md
@@ -1,2 +1,83 @@
 #   常用的遍历方法
 
+
+## 1. for 循环
+> 只要循环的数据有长度属性，都可以用for 循环；
+
+```javascript
+       let str = "你好啊！"，
+           arr = [1,2,3,4,5];
+            // 循环字符串
+           for（let i =0 ;i<str.length;i++）{
+               console.log(str[i]);
+           }
+
+         // 循环数组
+         for(let i ; i<arr.length;i++){
+             console.log(arr[i]);
+         }
+
+```
+
+## 2. forEach() 语句
+> Array.prototype.forEach();  forEach()方法定义在数组的原型对象上， 因此只能遍历数组，将数组中的每一个元素作为回调函数的参数
+```javascript
+       let arr = [1,2,3,4,5] ;
+     let newArr =  arr.forEach(item=>{
+           console.log(item*2);
+          return  item*2
+       })
+       console.log(newArr);  //  undefined ；  
+
+```
+> 特点：  1.  返回值为undefined ；2 . 不可进行链式操作； 3.  除非抛出异常，否则无法终止或者跳出循环 ;
+
+## 3. for ... in  
+> for．．．in 是为遍历对象属性而构建的，不建议与数组一起使用
+```javascript
+
+    let obj = { 
+        name:"jack",
+        age:18
+    }
+    
+    for(let key in obj){  
+        console.log(`${key}: ${obj[key]}`)
+    }
+
+```
+## 4. for...of (ES6 中的语法)
+> for... of  可遍历可迭代对象，数组，字符串都可以，<font color="#42B983">Object 对象不行</font> ； 与for...in 的区别在于，for...in还会遍历原型对象上的属性，因此更花时间，而for...of 只遍历 对象，建议多使用for...of　而非for..in 
+
+```javascript
+    let obj = { 
+        name:"jack",
+        age:18
+    }
+    for(let key of obj){  
+        console.log(`${key}: ${obj[key]}`)  // obj is not iterable 
+    }
+
+```
+## 5. map  [ES6中的语法]
+> map 遍历数组， 将数组中的每一个元素传入回调函数中 。 特点，不该改变原数组，返回一个新的数组
+
+```javascript
+         let arr = [1,2,3,4,5]
+         let newArr = arr.map(item=> item*2)
+         console.log(newArr);  //  [2,4,6,8,10]
+
+```
+## 6. reduce(preVaule,item,index) 
+> reduce 遍历数组，将数组中的元素依次相加,返回最后的总和。 三个参数分别表示，前面累计相加的和，当前要加的元素，当前元素的索引；
+
+```javascript
+    let arr = [1,2,3,4,5] 
+    let newArr=  arr.reduce((preValue,item)=> preValue + item)    // preValue 默认值为0 ;
+    
+```
+## 7. filter () 
+
+
+
+
