--- a/JavaScript/事件委托.md
+++ b/JavaScript/事件委托.md
@@ -1,1 +1,19 @@
 # 什么是事件委托？
+
+> ###  利用事件冒泡的原理，在DOM树中尽量高的元素节点上注册一个事件，再利用条件判断语句， 给不同的子元素添加处理句柄。这样就只用给父元素注册一个事件，不必给每个子元素都一个一个的去注册事件；
+
+# 为什么要用事件委托？
+
+> ### 1. 不需要给每个子元素添加事件监听函数，直接在父元素上添加一个事件监听函数，这样管理的函数变少了；
+  ### 2. 将事件监听函数放在父元素上，这样即使子元素的动态的添加和修改，也不需要改变事件的绑定；
+ 
+# 事件对象Event
+
+## 事件发生后就会自动产生一个事件对象event，作为参数传给监听函数，
+
+> ### event.target  返回触发事件的那个节点
+> ### event.currentTarget  返回绑定事件监听函数的那个节点
+
+> ### Event.preventDefault()  // 取消浏览器对当前事件的默认行为；
+> ### Event.stopPropagation() //  阻止事件冒泡；
+                     
