--- a/JavaScript/遍历.md
+++ b/JavaScript/遍历.md
@@ -1,6 +1,5 @@
 #   常用的遍历方法
 
-
 ## 1. for 循环
 > 只要循环的数据有长度属性，都可以用for 循环；
 
@@ -47,7 +46,7 @@
 
 ```
 ## 4. for...of (ES6 中的语法)
-> for... of  可遍历可迭代对象，数组，字符串都可以，<font color="#42B983">Object 对象不行</font> ； 与for...in 的区别在于，for...in还会遍历原型对象上的属性，因此更花时间，而for...of 只遍历 对象，建议多使用for...of　而非for..in 
+> for... of  可遍历可迭代对象，数组，字符串都可以，<font color="#42B983">Object 对象不行</font> ； 与for...in 的区别在于，for...in还会遍历原型对象上的属性，因此更花时间，而for...of 只遍历 可迭代对象，建议多使用for...of　而非for..in 
 
 ```javascript
     let obj = { 
@@ -66,7 +65,6 @@
          let arr = [1,2,3,4,5]
          let newArr = arr.map(item=> item*2)
          console.log(newArr);  //  [2,4,6,8,10]
-
 ```
 ## 6. reduce(preVaule,item,index) 
 > reduce 遍历数组，将数组中的元素依次相加,返回最后的总和。 三个参数分别表示，前面累计相加的和，当前要加的元素，当前元素的索引；
