防抖和节流

--- a/ES6/箭头函数.md
+++ b/ES6/箭头函数.md
@@ -1,7 +1,7 @@
 ## 语法
 
 ```javascript
-    // 省略 {}  则自动返回结果
+    // 省略 {}  则自动返回一个
     const arrow = (a,b)=> a+b 
     
     // 不省略的{},  想要一个返回值的话，则需要 手动return 
