事件循环笔记

--- a/JavaScript/事件循环机制.md
+++ b/JavaScript/事件循环机制.md
@@ -1,21 +1,74 @@
 
-
-https://www.jianshu.com/p/9644f13568c0
-
-https://www.jianshu.com/p/667a20d008cf
-
-https://segmentfault.com/a/1190000015317434  最佳解释
-
 #  事件循环机制
 
-## 作用
-> javascript 是单线程从脚本语言，为了防止主线程阻塞，事件循环机制应运而生；
+## 怎么来的及作用
 
-## 执行栈
+javascript 是单线程从脚本语言，为了防止主线程阻塞，事件循环机制应运而生；
 
-## 执行上下文 
+## 执行栈和执行上下文环境
+
+函数在被调用时，会形成一个执行上下文环境，执行上下文环境中包含函数的信息，比如函数的参数，函数的调用栈，this指针等信息。
+这个执行上下文环境会被压入到栈内存，所以也叫执行栈；
+
 
 ## 主线程
-> 主线程决定现在执行 执行栈中的哪个事件。 主线程循环即会不停的从执行栈中读取事件，并执行任务。当遇到异步事件时，并不会等待异步事件返回结果，而是将异步事件放入与执行栈不同的任务队列中，
 
-## 
+主线程决定现在执行 执行栈中的哪个事件。 主线程循环即会不停的从执行栈中读取事件，并执行任务。当遇到异步事件时，并不会等待异步事件返回结果，而是将异步事件放入与执行栈不同的任务队列中，
+
+## 同步和异步
+
+同步任务是按代码的书写顺序，从上到下来执行；
+
+异步任务并不是按书写顺序，排队立即执行，而是我们给异步任务设置了触发条件，在满足这个触发条件前，可以先去执行别的代码；所以异步的一个好处就是不会给单线程的js带来阻塞的问题；
+
+## 异步是怎么实现的？
+
+我们都知道JS是单线程的，那单线程是怎么实现异步的呢？事实上所谓的"JS是单线程的"只是指JS的主运行线程只有一个，而不是整个运行环境都是单线程。JS的运行环境主要是浏览器，以大家都很熟悉的Chrome的内核为例，他不仅是多线程的，而且是多进程的：
+
+![avatar](../image/js-eventloop.png)  
+
+从上图可以看出，运行环境是多线程的，对于前端工程师来说，主要关心的还是渲染进程，下面来分别看下里面每个线程是做什么的。
+
+>  GUI 
+
+GUI线程就是渲染页面的，他解析HTML和CSS，然后将他们构建成DOM树和渲染树就是这个线程负责的。
+
+> JS 引擎线程
+
+这个线程就是负责执行JS 的主线程，前面说的"JS是单线程"就是指的这个线程，大名鼎鼎的chrome v8引擎就是在这个线程运行的；
+
+但是要注意，这个线程和GUI 线程是互斥的，互斥的原因是JS可以操作DOM，如果JS引擎线程和GUI 线程同时操作DOM结果就混乱了，不知道到底渲染哪个结果。这带来的后果就是，如果JS 长时间运行，GUI 线程就不能执行，导致整个页面就卡死。
+
+> 定时器线程
+
+异步任务的例子定时器， 就是运行在这里， 跟js主线程根本不在同一个地方 ，所以"单线程的JS"能够实现异步；
+
+> 事件触发线程
+
+定时器线程只是起一个定时的作用，并不会执行时间到了的回调，真正执行回调的还是JS 主线程。所以时间到了定时器线程会将回调事件发送给事件触发线程，然后事件触发线程将这个回调事件添加到事件队列中去。最终，JS主线程从事件队列中读取回调执行。
+
+事件触发线程不仅可以将定时器事件放入任务队列，也负责将其他满足条件的事件放入任务队列；
+
+> Event Loop 
+
+浏览器环境的事件循环和Node环境的事件循环是有些区别的
+
+## 浏览器环境的Event Loop
+
+事件循环就是一个循环，是各个异步线程用来通讯和协同执行的机制。各个线程为了交换消息，还有一个公用的数据区，这就是事件队列。各个异步线程执行完后，通过事件触发线程将回调事件放到事件队列，主线程每次干完手上的活儿就来看看这个队列有没有新活儿，有的话就取出来执行。流程图如下：
+
+![avatar](../image/js-eventloop02.png) 
+
++ 1. 主线程每次执行时，先看执行的是同步任务还是异步API ;
++ 2. 遇到同步任务就继续执行，一直到执行完；
++ 3. 遇到异步API，就把它交给对应的异步线程，自己就行执行同步任务；
++ 4. 异步线程执行异步API ,执行完后，就将回调事件放入事件队列；
++ 5. 主线程上的同比任务执行完后，就读取事件队列中的回调函数并执行；
++ 6. 以上流程不断反复进行，这就是所谓的事件循环机制；
+
+## 为什么定时器不准？
+
+事实上，js中的定时任务并不一定是准时执行，定时事实上是指最早时间；
+
+导致这个现象发生的原因，是因为js 线程总是先执行同步任务，然后再执行事件队列中的回调函数；遇到定时器，现将它交给定时器线程，开始计时，比如2秒，2秒后触发回调事件，事件触发线程就将这个回调事件放入事件队列，异步流程到此结束。主线程如果有空，就将定时器回调拿出来执行，否则计时器回调函数就一直放在队列里。
+
