--- a/JavaScript/事件循环机制.md
+++ b/JavaScript/事件循环机制.md
@@ -49,6 +49,14 @@ GUI线程就是渲染页面的，他解析HTML和CSS，然后将他们构建成D
 
 事件触发线程不仅可以将定时器事件放入任务队列，也负责将其他满足条件的事件放入任务队列；
 
+> 异步HTTP请求线程
+
+这个线程负责处理异步的ajax 请求，当请求完成后，会通知事件触发线程， 事件触发线程将这事件放入事件队列，等待主线程执行；
+
+## JS异步的实现机制：
+
+所以JS异步的实现靠的就是浏览器的多线程，当他遇到异步API时，就将这个任务交给对应的线程，当这个异步API满足回调条件时，对应的线程又通过事件触发线程将这个事件放入任务队列，然后主线程从任务队列取出事件继续执行。这个流程我们多次提到了任务队列，这其实就是
+
 > Event Loop 
 
 浏览器环境的事件循环和Node环境的事件循环是有些区别的
@@ -72,3 +80,39 @@ GUI线程就是渲染页面的，他解析HTML和CSS，然后将他们构建成D
 
 导致这个现象发生的原因，是因为js 线程总是先执行同步任务，然后再执行事件队列中的回调函数；遇到定时器，现将它交给定时器线程，开始计时，比如2秒，2秒后触发回调事件，事件触发线程就将这个回调事件放入事件队列，异步流程到此结束。主线程如果有空，就将定时器回调拿出来执行，否则计时器回调函数就一直放在队列里。
 
+## 事件队列详解
+
+上面理解event loop 的过程中，为了方便理解事件循环，我们简化了事件队列； 事实上，事件队列中的事件分两类： 宏任务和微任务。
+
+微任务拥有更高的优先级，当事件循环遍历队列时，先检查微任务队列，如果里面有任务，就全部拿来执行，执行完之后再执行一个宏任务。执行每个宏任务之前都要检查下微任务队列是否有任务，如果有，优先执行微任务队列。所以完整的流程图如下：
+
+![avatar](../image/js-eventloop03.png)
+
+想要知道一个异步API 在哪个阶段执行， 就要弄清楚它是宏任务还是微任务；
+
+常见微任务：
+
++ 1. Promise
++ 2. process.nextTick
++ 3. Object.observe
+
+
+常见宏任务：
+
++ 1. setTimeout , setInterval
++ 2. I/O
++ 3. UI 事件
+
+
+
+##  总结：
+
++ 1. 所谓的"JS 单线程" 指的是主线程只有一个，并不是整个运行环境都是单线程；
++ 2. JS 的异步靠底层的多线程实现；
++ 3. 不同的异步API 对应不同的实现线程；
++ 4. 异步线程与主线程通讯靠的是Event Loop
++ 5. 异步线程完成任务后将其放入任务队列
++ 6. 主线程不断轮询任务队列，拿出任务执行
++ 7. 任务队列有宏任务队列和微任务队列的区别
++ 8. 微任务队列的优先级更高，所有微任务处理完后才会处理宏任务
++ 9. Promise是微任务
