时间戳格式转化

--- a/代码库/时间戳.md
+++ b/代码库/时间戳.md
@@ -1,1 +1,87 @@
-666
+
+
+## Date 对象上提供了很多很多方法用来处理日期和时间
+
+## 1. 创建Date 实例对象的4种方法：
+
+```javascript
+
+var d = new Date();  
+var d = new Date(milliseconds); // 13位数的时间戳
+var d = new Date(dateString);
+var d = new Date(year, month, day, hours, minutes, seconds, milliseconds);
+```
+### 在JavaScript中 通过 new Date().getTime() 得到的就是13位数的时间戳，精确度为毫秒
+
+
+## 2. 10位数的时间戳 转为"yyyy-MM-dd HH:MMM:SS"  格式的日期字符串
+
+ ### 10位数的时间戳要先转换成13位的时间戳， 乘以1000
+
+```javascript
+export const timeCycle = time => {
+    let date = new Date(time * 1000);
+    let y = date.getFullYear();
+    let m = date.getMonth() + 1;
+
+    let d = date.getDate();
+    d = d < 10 ? ('0' + d) : d;
+    let h = date.getHours();
+    h = h < 10 ? ('0' + h) : h;
+    let minute = date.getMinutes();
+    let second = date.getSeconds();
+    minute = minute < 10 ? ('0' + minute) : minute; second = second < 10 ? ('0' + second) : second;
+    // console.log( y + '-' + m + '-' + d + ' ' + '　' + h + ':' + minute + ':' + second) 
+    let dates = y + '-' + m + '-' + d + ' ' + '　' + h + ':' + minute + ':' + second;
+    return `${y}-${m}-${d} ${h}:${minute}:${second}`
+}
+
+
+```
+## 3. 13位数的时间戳 转为"yyyy-MM-dd HH:MMM:SS"  格式的日期字符串
+```javascript
+export const timeCycle = time => {
+    let date = new Date(time * 1000);
+    let y = date.getFullYear();
+    let m = date.getMonth() + 1;
+
+    let d = date.getDate();
+    d = d < 10 ? ('0' + d) : d;
+    let h = date.getHours();
+    h = h < 10 ? ('0' + h) : h;
+    let minute = date.getMinutes();
+    let second = date.getSeconds();
+    minute = minute < 10 ? ('0' + minute) : minute; second = second < 10 ? ('0' + second) : second;
+    // console.log( y + '-' + m + '-' + d + ' ' + '　' + h + ':' + minute + ':' + second) 
+    let dates = y + '-' + m + '-' + d + ' ' + '　' + h + ':' + minute + ':' + second;
+    return `${y}-${m}-${d} ${h}:${minute}:${second}`
+}
+
+```
+## 4. 将当前日期 转为  "yyyy-MM-dd HH:MMM:SS" 格式的日期字符串
+```javascript
+export const getNewDate = () => {
+    let date = new Date();
+    let y = date.getFullYear();
+    let m = date.getMonth() + 1;
+    m = m < 10 ? ('0' + m) : m;
+    let d = date.getDate();
+    d = d < 10 ? ('0' + d) : d;
+    let h = date.getHours();
+    h = h < 10 ? ('0' + h) : h;
+    let minute = date.getMinutes();
+    minute = minute < 10 ? ('0' + minute) : minute;
+    let second = date.getSeconds();
+    second = second < 10 ? ('0' + second) : second;
+    return `${y}-${m}-${d} ${h}:${minute}:${second}`
+}
+
+
+```
+
+
+## 三元表达式与 if...else 的差别在于 三元表达式有返回值 而 if...else 没有返回值
+
+```javascript
+
+```
