--- a/Vue/嵌套路由之间的通信.md
+++ b/Vue/嵌套路由之间的通信.md
@@ -3,3 +3,53 @@
 
 
 https://www.cnblogs.com/hjbky/p/12626127.html
+
+
+## 原理
+
+利用vue 实例提供的$emit() 和$on()这个两个方法
+
+vm.$emit() 用来触发“当前实例”上的事件 ， 这个事件可以是自定义事件 ，参数可传可不传； 
+
+vm.$on() 用来监听“当前实例”上的自定义事件，注意只监听自定义事件 
+
+vm.$on(eventName , callback)     // 也可以直接在组件上监听 @eventName="callback"
+
+
+---
+
+## 嵌套组件和父子组件的区别
+
+父子组件，因为有组件之间的引用，可以在子组件中触发一个自定义事件，子组件被引用后，直接在子组件上通过@eventName 来监听这个自定义事件 
+
+嵌套路由组件， 没有组件之间的引用，所以要想通信，我们得创建一个作为中间件的vue 实例。  在vue 根实例上创建一个vue 实例，其他所有组件
+都可以拿到这个实例。 再结合vm.$emit() 和vm.$on() 我们就可以实现嵌套路由之间的通信；
+
+
+
+---
+
+1. 在main.js 中创建一个vue 实例
+
+```javascript
+  data(){
+        return {
+            // 在根实例上创建一个vue实例
+            myEvent: new Vue()
+
+   }
+  }
+   
+```
+
+---
+
+2.  取到创建的vue根实例中的myEvent 属性，属性值是一个vue实例，在这个实例上自定义事件，并监听事件
+
+ ```javascript
+          
+          this.$root.myEvent  //  取vue 实例
+          this.$root.myEvent.$emit()    // 通过$emit 自定义事件
+          this.$root.myEvent.$emit("test","hello emit event")
+          this.$root.myEvent.$on("test", data=>{......})
+ ```
