表达式和语句

--- a/Vue/嵌套路由之间的通信.md
+++ b/Vue/嵌套路由之间的通信.md
@@ -47,9 +47,12 @@ vm.$on(eventName , callback)     // 也可以直接在组件上监听 @eventName
 2.  取到创建的vue根实例中的myEvent 属性，属性值是一个vue实例，在这个实例上自定义事件，并监听事件
 
  ```javascript
-          
+          // 子路由组件中
           this.$root.myEvent  //  取vue 实例
           this.$root.myEvent.$emit()    // 通过$emit 自定义事件
           this.$root.myEvent.$emit("test","hello emit event")
+
+ 
+           // 父路由组件中
           this.$root.myEvent.$on("test", data=>{......})
  ```
