--- a/JavaScript/遍历.md
+++ b/JavaScript/遍历.md
@@ -29,7 +29,7 @@
        console.log(newArr);  //  undefined ；  
 
 ```
-> 特点：  1.  返回值为undefined ；2 . 不可进行链式操作； 3.  除非抛出异常，否则无法终止或者跳出循环 ;
+> 特点：  1.  返回值为undefined ；2 . 不可进行链式操作； 3.  除非抛出异常，否则无法终止或者跳出循环 break和return命令都不能奏效;
 
 ## 3. for ... in  
 > for．．．in 是为遍历对象属性而构建的，不建议与数组一起使用
