盒子始终保持满屏

--- a/代码库/时间戳.md
+++ b/代码库/时间戳.md
@@ -41,7 +41,7 @@ export const timeCycle = time => {
 ## 3. 13位数的时间戳 转为"yyyy-MM-dd HH:MMM:SS"  格式的日期字符串
 ```javascript
 export const timeCycle = time => {
-    let date = new Date(time * 1000);
+    let date = new Date(time);
     let y = date.getFullYear();
     let m = date.getMonth() + 1;
 
