--- a/JavaScript/原型，原型对象，原型链.md
+++ b/JavaScript/原型，原型对象，原型链.md
@@ -24,8 +24,8 @@
 
 -------
 
-##  在构造函数上定义属性和方法，它的实例对象会继承这些属性和方法，继承的实质是自动再定义一遍属性和方法；同时实例对象还会有一个__proto__ 属性，
-##  通过这个__proto__ 属性，我们可以看到构造函数的原型对象上的属性和方法， 这些属性和方法会被所有实例对象所共享，也就实现了继承；
+>  在构造函数上定义属性和方法，它的实例对象会继承这些属性和方法，继承的实质是自动再定义一遍属性和方法；同时实例对象还会有一个__proto__ 属性，
+  通过这个__proto__ 属性，我们可以看到构造函数的原型对象上的属性和方法， 这些属性和方法会被所有实例对象所共享，也就实现了继承；
 
 
 ```javascript
@@ -56,4 +56,11 @@
 > # 原型链
 
 每个对象都有 __proto__ 属性，通过该属性可以找到该对象的原型对象，通过原型对象的__proto__属性又可以找它自己的原型对象，以此类推，形成了所谓的原型链；
-当查找对象上的某个属性时，先去该对象上找，找不到就去它的原型对象上找，如果还是没有的话再去向原型对象的原型对象里去寻找...... 这个操作被委托在整个原型链上，这个就是我们说的原型链了。
+当查找对象上的某个属性时，先去该对象上找，找不到就去它的原型对象上找，如果还是没有的话再去向原型对象的原型对象里去寻找...... 层层向上直到一个对象的原型对象为 null。这个操作被委托在整个原型链上，这个就是我们说的原型链了。
+
+> # JavaScript中的继承
+
+每一个对象都会从它的原型对象继承属性。
+
+实际上，继承是一个十分具有迷惑性的说法。继承意味着复制操作，然而JavaScript中并不会复制对象的属性，相反，JavaScript只是在两个对象之间创建一个关联，
+这样，一个对象就可以通过委托，访问到另一个对象的属性和方法，所以，与其说是继承，委托的说法反而更准确些。
