--- a/JavaScript/遍历.md
+++ b/JavaScript/遍历.md
@@ -74,7 +74,14 @@
     let newArr=  arr.reduce((preValue,item)=> preValue + item)    // preValue 默认值为0 ;
     
 ```
-## 7. filter () 
+## 7. filter (item,index,arr)
+
+``` 
+  //   将小于10的数过滤掉
+   let newArr = arr.filter((item,index,arr)=>{
+       return item>10
+   })
+```
 
 
 
