--- a/工具箱/快捷键.md
+++ b/工具箱/快捷键.md
@@ -40,6 +40,10 @@ ctrl+k: 在网页的任意位置 快速百度；
 
 Ctrl+ 数字： 切换到浏览器的某个窗口；
 
+回格键：在windows 文件夹中是"后退"的快捷键
+
+
+
 # window10 快捷键
 
 win+ v 打开剪切板 // 复制，截图的内容都可以找到
@@ -48,4 +52,9 @@ win+shift+s : 截图;
 
 win+ 数字： 打开固定在任务栏的程序；
 
-ctrl+ 鼠标左键 ： 复制文件
+ctrl+ 鼠标左键：复制文件
+
+
+
+
+https://www.zhihu.com/question/28993252/answer/61618961
