--- a/JavaScript/作用域和闭包.md
+++ b/JavaScript/作用域和闭包.md
@@ -149,3 +149,8 @@
   ``` 
 
  **<font color='#42B983' size=4.5 >执行f() 传入不同的参数，就可以在原来的基础上对 test()内部的变量sum 反复操作。 </font>** 
+
+
+ ## 3. 应用场景
+
+ 高阶函数常常会利用闭包。 不管是将函数作为参数，或者返回一个函数，用来处理运算的缺失或者延续，这种场景基本都会利用闭包。
