--- a/JavaScript/遍历.md
+++ b/JavaScript/遍历.md
@@ -15,14 +15,14 @@
 是遍历数组的最好方法。
 
 
-> 特点：  1.  返回值为undefined ；2. 可以修改原数组；3 . 不可进行链式操作； 4.  除非抛出异常，否则无法终止或者跳出循环 break和return命令都不能奏效;
+> 特点：  1. return 时返回值为undefined ；2. 不修改原数组；3 . 不可进行链式操作； 4.  除非抛出异常，否则无法终止或者跳出循环 break和return命令都不能奏效;
 
 
 ## 2. map  
 > Array.prototype.map(); 
 >  map()方法定义在数组的原型对象上， 因此只能遍历数组
 
-> 特点: 1. 有返回值，返回一个新的数组；2.不该改变原数组
+> 特点: 1. return 有返回值，返回一个新的数组；2.不该改变原数组
 
 
 
