--- a/JavaScript/防抖和节流.md
+++ b/JavaScript/防抖和节流.md
@@ -1,85 +1,122 @@
 # 防抖和节流
 
-
-> 防抖和节流 考查的是对闭包和this的理解与应用。
+> 防抖和节流 考查的是对闭包和 this 的理解与应用。
 
 ## 防抖
 
-所谓防抖：就是延时n秒后执行任务, 如果在n秒内，又触发了事件，则会重新计算时间，再次延后n秒执行。
+所谓防抖：就是延时 n 秒后执行任务, 如果在 n 秒内，又触发了事件，则会重新计算时间，再次延后 n 秒执行。
 
-比如2秒内触发同一个事件，只有最后一次会执行。
+比如 2 秒内触发同一个事件，只有最后一次会执行。
 
- 
 > 只有在某个时间段内，没有再次触发某个函数时，才真正调用防抖函数；
-
-
 
 ## 实现防抖函数
 
+#### 1.对窗口变动实现防抖
+
 ```javascript
- //通过在输入框里输入内容 模拟频繁的操作 
+ //通过改变浏览器窗口， 模拟频繁的操作
+ // 实现思路，将要执行的任务放入一个定时器里，n 秒后执行，如果在n秒内又执行了操作，则将前一个定时器清除，重新计时，又等n 后才执行
 
- // 利用闭包实现防抖
-
-   document.queryselector("input").addEventListener("input",debounce(function(){
-     console.log(this.value)
-   },1000))
-    
- function debounce(fn,delay){
-    let timer = null
-    return function(){
-        clearTimeout(timer)  //  清除定时器
-        timer = setTimeout(()=>{
-            fn.call(this)  // 执行fn, 同时改变fn 函数中this的指向；
-
-            timer = null   // 清除闭包  
-        },delay)
-    }
-
+let timer = null   // 全局变量，用来存放定时器
+ window.onresize = fucntion(){
+  clearTimeout(timer)
+  timer = setTimeout(()=>{
+    console.log("窗口变动")
+  },2000)
  }
+// 以上，只要窗口变动了，就执行定时器。并且只要在2秒前窗口又变动了，则清除调上一个定时器，那么里面的任务不会执行，重新生成一个定时器
 
-// 输入的时候，触发input 事件，执行debounce函数，debounce函数返回一个函数，于是执行这个返回的函数，
-// 返回的函数是一个闭包函数，引用了变量timer，并且把开启的定时器赋值给了它。在定时器里，延迟1秒执行回调函数，
-// 如果在1秒内又触发了input 事件，继续执行 闭包，闭包把刚才的定时器销毁了，所以刚才的回调函数无法执行，重新开启一个定时器，重新执行回调函数。
-// 以此类推，直到最后在1秒内没有再次触发，就会执行闭包里的回调函数，也就达到了防抖的效果。
 
 ```
 
+#### 2. 实现一个防抖函数的封装
+
+```
+ // 利用闭包实现防抖 ,这样存储定时器的变量不会造成全局变量的污染。
+  function debounce(fn, delay) {
+        let timer = null;
+        return function () {
+          clearTimeout(timer); // clearTimeout 清除定时器
+          timer = setTimeout(() => {
+            fn.call(this); // 执行回调函数fn, 万一回调函数中要用到this,我们同时可以在这里改变一下this的指向
+            timer = null; // 清除闭包， 没有清除定时器，而只是将变量timer  在内存中销毁, setTimeout()返回值是定时器ID
+          }, delay);
+        };
+      }
+
+ // debounce 返回的是一个函数,这个函数里的任务才是我们要进行的防抖操作内容
+
+ let handle = debounce(()=>{
+  console.log("窗口变动了")
+ },2000)
+
+window.onresize = function(){
+  handle()
+}
+
+// 不能是如下这样
+windoe.onresize = function(){
+  debounce(()=>{
+  console.log("窗口变动了")
+ },2000)()
+}
+
+如果是上面这样写，则每次触发了onresize 事件，就会执行debounce()返回一个新的函数，并且函数里包含要执行的任务，那么就达不到防抖的效果。
+
+```
 
 ## 节流
 
-所谓节流：是指连续触发事件，在n 秒内只执行最早触发事件的那一次。
-
+所谓节流：是指连续触发事件，在 n 秒内只执行最早触发事件的那一次。
 
 ## 实现节流函数
 
+#### 1. 对窗口变动实现节流
 
 ```javascript
-  //通过在输入框里输入内容 模拟频繁的发送ajax 
+// //通过改变浏览器窗口， 模拟频繁的操作
 
-  document.queryselector("input").addEventListener("input",throttle(function(){
-     console.log(this.value)
-   },1000))
-    
- function throttle(fn,delay){
-    let timer = null
+// 实现思路，触发了事件，n 秒内只执行一次，那么将这个任务放进定时器里，n 秒后执行。在n 秒内哪怕多次触发事件，
+//只要上一个定时器里的任务没执行完，那么这个定时器就还在，那么就不执行任何任务。
+let timer = null;
+window.onresize = function () {
+  if (timer) return;
+  timer = setTimeOut(() => {
+    console.log("窗口变动了");
+    timer = null;
+  }, 2000);
+};
+```
+
+#### 2. 封装一个节流函数
+
+```
+  function throttle(callback,delay){
+    let timer = null;
     return function(){
-        if(timer) return
-        timer = setTimeout(()=>{
-            fn.call(this)  // 执行fn, 同时改变fn 函数中this的指向；
-             timer = null
-        },delay)
+      if(timer)  return;
+      timer = setTimeout(()=>{
+        callback.call(this) ; //执行回调函数， 万一回调函数中要用到this,我们同时可以在这里改变一下this的指向
+        timer = null; // 清除闭包，同时也真正清除了定时器。
+      },delay)
     }
+  }
 
- }
+
+  let handle = throttle(() => {
+        console.log(999);
+    }, 3000);
+
+  window.onresize = function () {
+        handle();
+    };
 
 ```
 
 ## 防抖和节流的区别
 
-> 效果上： 防抖是如果规定的延时是n秒，则在n秒内，无论触发多少次，都按最后一次触发事件，重新开始计算时间，延后n 秒再执行。
-节流是 如果规定的延时是n 秒，则在n 秒内，无论触发多少次， 只有第一次触发事件有效。 只有等这次执行的任务执行完了，再次触发事件才有效。
-
+> 效果上： 防抖是如果规定的延时是 n 秒，则在 n 秒内，无论触发多少次，都按最后一次触发事件，重新开始计算时间，延后 n 秒再执行。
+> 节流是 如果规定的延时是 n 秒，则在 n 秒内，无论触发多少次， 只有第一次触发事件有效。 只有等这次执行的任务执行完了，再次触发事件才有效。
 
 > 代码实现上： 防抖是 当发现定时器还在，则清除定时器，重启再开启一个。 节流是当发现定时器还在，则等待定时器里的任务执行完。
-
